--- a/Ladeskab_grp42/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab_grp42/Ladeskab/Ladeskab.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ladeskab.Lib\Ladeskab.Lib.csproj" />
   </ItemGroup>
 
