--- a/Ladeskab_grp42/Ladeskab.Unit.Test/Ladeskab.Unit.Test.csproj
+++ b/Ladeskab_grp42/Ladeskab.Unit.Test/Ladeskab.Unit.Test.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.3">
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
