--- a/Ladeskab_grp42/Ladeskab.Lib/Ladeskab.Lib.csproj
+++ b/Ladeskab_grp42/Ladeskab.Lib/Ladeskab.Lib.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
+  </ItemGroup>
+
 </Project>
