--- a/Ladeskab_grp42/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab_grp42/Ladeskab/Ladeskab.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ladeskab.Lib\Ladeskab.Lib.csproj" />
   </ItemGroup>
 
